kubernetes/development/litellm/litellm.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm
  namespace: development
  labels:
    app: litellm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        task: development
        app: litellm
    spec:
      priorityClassName: development-priority
      containers:
      - name: litellm
        image: ghcr.io/berriai/litellm:main-stable
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        args:
        - --config
        - /app/config.yaml
        - --port
        - "4000"
        volumeMounts:
        - name: litellm-config
          mountPath: /app/config.yaml
          subPath: config.yaml
      volumes:
      - name: litellm-config
        configMap:
          name: litellm-config
          items:
          - key: config.yaml
            path: config.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: development
spec:
  ports:
  - port: 80
    targetPort: 4000
  selector:
    app: litellm

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litellm-la1r-com-https
  namespace: development
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: letsencrypt-litellm-la1r-com-tls
    hosts:
    - litellm.la1r.com
  rules:
  - host: litellm.la1r.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: litellm
            port:
              number: 80
